@@ -146,8 +146,12 @@ compile-time performance improvement).
 31. Installed a .gitignore file on a user's suggestion. When using the svn
 repository with git (through git svn) this helps keep it tidy.
 
-32. Add underflow check in JIT which may occure when the value of subject
+32. Add underflow check in JIT which may occur when the value of subject
 string pointer is close to 0.
+
+33. Arrange for classes such as [Aa] which contain just the two cases of the 
+same character, to be treated as a single caseless character. This causes the 
+first and required code unit optimizations to kick in where relevant.
 
 
 Version 10.33 16-April-2019
